<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tituloTelaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textSize="40dp"
        android:text="@string/titulo_telaCadastro"
        />

    <EditText
        android:id="@+id/cadNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cadNome"
        android:textSize="20dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/cadEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cadEmail"
        android:textSize="20dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/cadTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cadTelefone"
        android:textSize="20dp"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:hint="@string/btnCadastrar"/>

</LinearLayout>